Adicionando o Docker Compose.