@@ -33,7 +33,7 @@ public class Configuration implements WebMvcConfigurer {
         ReloadableResourceBundleMessageSource messageSource = new ReloadableResourceBundleMessageSource();
         messageSource.setBasenames("classpath:/messages", "org.hibernate.validator.ValidationMessages", "ValidationMessages");
         messageSource.setDefaultEncoding("UTF-8");
-        messageSource.setDefaultLocale(Locale.of("pt", "BR"));
+        messageSource.setDefaultLocale(new Locale("pt", "BR"));
         messageSource.setCacheSeconds(3600); //Atualiza a cache a cada uma hora
         return messageSource;
     }
